# Eigen3ToPython

./: .envrc  .gitignore  .gitmodules  .mergify.yml  .travis.yml  AUTHORS  CMakeLists.txt  README  README.md  appveyor.yml  conanfile.py  flake.nix  pyproject.toml  requirements.txt  setup.in.py  setup.py
.github/workflows/: Eigen3ToPython.recipe  build.yml  conan.yml  package.yml  pbuilderrc
.github/workflows/sources/: package.yml
.travis/: functions.ps1
conan/test_package/: conanfile.py  test.py
debian/: changelog  control  copyright  python3-eigen.lintian-overrides  rules  watch
dependencies/: pybindgen-0.16
eigen/: c_eigen.pxd  c_eigen_private.pxd
include/: eigen_wrapper.hpp
src/: CMakeLists.txt  EigenTypedef.h  EigenUtils.h  MatrixAddon.h  MatrixBaseAddon.h  __init__.py  convert.py  generate.py
src/.clang/: eigen3.cpp.clang
tests/: load.py  test_eigen.py
utils/: __init__.py  angleaxis.in.pyx  extras.in.pyx  generate_eigen_pyx.py  quaternion.in.pyx
